fix #6125 -- CoCalc links with code are not visible. (Should be colored or shaded).

--- a/src/packages/frontend/index.sass
+++ b/src/packages/frontend/index.sass
@@ -159,7 +159,7 @@ div#smc-react-container
 
 /* fix bootstrap ugliness  */
 code
-  color            : #333
+  color            : revert
   background-color : white
   padding          : 0
 
